#ifndef APPLICATION_H
#define APPLICATION_H

#include <QApplication>
#include <QMainWindow>
#include <QWidget>
#include <QVBoxLayout>

class Application
{
public:
    int run(int argc, char *argv[]);
};

#endif